# bitlaunch-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-05-bitlaunch-mcp.md  2026-06-05-transactions.md
docs/superpowers/specs/: 2026-06-05-bitlaunch-mcp-design.md  2026-06-05-transactions-design.md
src/bitlaunch_mcp/: cli.py  client.py  config.py  server.py  ssh.py
tests/: test_cli.py  test_client.py  test_config.py  test_live.py  test_server.py  test_ssh.py
tests/fixtures/: vultr_options.json
