[project]
name = "bitlaunch-mcp"
version = "0.1.0"
description = "MCP server for renting GPU machines via BitLaunch (Vultr host)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10",
    "httpx>=0.27",
    "asyncssh>=2.14",
]

[project.scripts]
bitlaunch-mcp = "bitlaunch_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
